crates/plotnik-lib/tests/03-analyze/alternations/mixed_multiple_alternations.txt
Q = (foo
  [
    A: (a)
    (b)
  ]
  [
    C: (c)
    (d)
  ]
)
==== diagnostics ====
error: cannot mix labeled and unlabeled branches
 --> query.ptk:4:5
  |
3 |     A: (a)
  |     - tagged branch here
4 |     (b)
  |     ^^^
  |
help: use all labels for a tagged union, or none for a merged struct

error: cannot mix labeled and unlabeled branches
 --> query.ptk:8:5
  |
7 |     C: (c)
  |     - tagged branch here
8 |     (d)
  |     ^^^
  |
help: use all labels for a tagged union, or none for a merged struct
==== symbols ====
Q
